# warp-ctc

./: CMakeLists.txt
include/: ctc.h
include/contrib/moderngpu/include/device/: devicetypes.cuh
include/detail/: ctc_helper.h  gpu_ctc.h  gpu_ctc_kernels.h  hostdevice.h  reduce.h
pytorch_binding/src/: binding.cpp
src/: ctc_entrypoint.cpp  reduce.cu
tests/: test.h  test_gpu.cu
